--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,18 @@
     package="com.kpp.kamalpanditpatil">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    ;
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".base.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -65,7 +66,10 @@
         <activity android:name=".ui.activities.admin.Attendance.AdminAttendanceCNCActivity" />
         <activity android:name=".ui.activities.admin.Attendance.AdminAttendanceGrindingActivity" />
         <activity android:name=".ui.activities.admin.Attendance.AdminAttendanceQandAActivity" />
-        <activity android:name=".ui.activities.utilities.AttendanceDetailActivity"></activity>
+        <activity android:name=".ui.activities.utilities.AttendanceDatewiseDetailActivity" />
+        <activity android:name=".ui.activities.utilities.AttendancePersonwiseDetails" />
+        <activity android:name=".ui.activities.utilities.AttendanceListActivity" />
+        <activity android:name=".ui.activities.utilities.AttendanceOvertimeDetails"></activity>
     </application>
 
 </manifest>
